Almost completed game

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 		</p>
 
 
-	 <div class="board">
+	 <div id="game-board" class="board">
+	    <!-- <div class="card"></div>
 	    <div class="card"></div>
 	    <div class="card"></div>
-	    <div class="card"></div>
-	    <div class="card"></div>
+	    <div class="card"></div> -->
   	</div>
 
 	<h3>Test your memory! It might not be as good as you think!</h3>
